# law_rag

./: 1.txt  README.md  Untitled.ipynb  Untitled1.ipynb  basic_batch_inputs.jsonl  claude.py  criminal_law_batch.jsonl  criminal_law_batch_rag.jsonl  criminal_law_metadata.json  explain.md  main.py  non_rag.ipynb  pyproject.toml  temp.py  test.py  ver2.ipynb  ver3.ipynb  ver4.ipynb  ver5.ipynb  ver6.ipynb  ver8-1.ipynb  ver8-2 copy.ipynb  ver8-2.ipynb  ver8-3.ipynb  wrtn.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
chroma_db/: chroma.sqlite3
code/: ver1.ipynb  ver4.ipynb  ver7.ipynb
non_rag/: batch_67f8f52b01a88190901773826a5f346b_output (1).jsonl
submit/: DockerFile  README.md  docker-compose.yml  interview.md  main.py  pyproject.toml  run.sh
submit/dataset/precedent_label/: 2000노225.json  2000노6341.json  2000노709.json  2000노863.json  2000도1007.json  2000도102.json  2000도1089.json  2000도1148.json  2000도1253.json  2000도159.json  2000도1765.json  2000도1858.json  2000도1881.json  2000도1908.json  2000도1914.json  2000도223.json  2000도2466.json  2000도2617.json  2000도2933.json  2000도3295.json  2000도3350.json  2000도3463.json  2000도3485.json  2000도3507.json  2000도4398.json  2000도4415.json  2000도4700.json  2000도4901.json  2000도4993.json  2000도5736.json  2000도5767.json  2000도745.json  2000도79.json  2001노3042.json  2001노477.json  2001노696.json  2001도1089.json  2001도1314.json  2001도1610.json  2001도210.json  (+2633 more)
submit/results/: criminal_law_batch_input_20250413_134824.jsonl  criminal_law_batch_output_20250413_134824.jsonl  criminal_law_evaluation_results_20250413_134824.csv
(+2735 files in other folders)
