[project]
name = "wrtn_assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "Kang Byungsoo"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "openai (>=1.73.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pypdf (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "main.py" },
]